tests/invalid/fstring_unknown_name/main.py
def run_case() -> None:
    out: str = f"{missing_value}"
    print(out)


if __name__ == "__main__":
    run_case()
